--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
   
     "rules": {
         "linebreak-style": ["error", "windows"]
-    }
+    },
+    "env": {
+        "browser": true
+      }
 }
